fixed overlapping assessment category column with footer left social media

--- a/job_seeker/styles.css
+++ b/job_seeker/styles.css
@@ -204,6 +204,8 @@ footer {
     align-items: center;
     width: 100%; /* Ensure footer spans full width */
     margin: 0; /* Remove any default margin */
+    position: relative; /* Ensure correct positioning */
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
 .footer-content {
@@ -211,7 +213,6 @@ footer {
     justify-content: space-between;
     width: 100%;
     padding: 0 0px;
-    max-width: 1200px;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
 
 }
@@ -219,12 +220,14 @@ footer {
 .footer-left {
     display: flex;
     align-items: center;
-    padding-left: 0;
+    padding-left: 20px;
     margin-left: 0;
+    padding-right: 10px;
     flex: 1 1 20%; /* Take full width on smaller screens */
-    min-width: 10%; /* Ensure columns don't get too narrow */
+    min-width: 200px; /* Ensure columns don't get too narrow */
     justify-content: left; /* Center align content */
     text-align: center; /* Center align text */
+    order:1;
 }
 
 .footer-logo {
@@ -261,15 +264,16 @@ footer {
     justify-content: flex-end;
     width: 100%;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
-    flex: 1 1 80%; /* Take approximately two-thirds of the width */
+    flex: 1 1 70%; /* Take approximately two-thirds of the width */
     text-align: center; /* Center align text */
     align-items: right;
+    order:2;
 }
 
 .footer-column {
     margin: 0 0px;
     flex: 1 1 20%; /* Take approximately one-third of the width */
-    min-width: 20%; /* Ensure columns don't get too narrow */
+    min-width: 200px; /* Ensure columns don't get too narrow */
 }
 
 
@@ -316,6 +320,7 @@ footer {
         text-align: center;
         align-items: center;
         justify-content: center;
+        margin-bottom: 20px; /* Add space below footer-left */
     }
 
     .footer-right {
